# kalman_filter

./: CMakeLists.txt  Readme.md
include/kalman_filter/: linear_kalman.hpp
test/: test_linear_kalman.cc
